docs/tests/typing/bad/testfile-redef-4.cpp

void f() {}
int f;
int main() {}
